--- a/web/infoshare/manager/edit_if.html
+++ b/web/infoshare/manager/edit_if.html
@@ -71,7 +71,7 @@ require "../includes/db.inc";
 //$_GET[DatasetId];
 //$result = mysql_query("SELECT * FROM InfoFiles WHERE id = $Id");
 
-$result_infofiles = mysql_query("SELECT InfoFiles.InfoFileId, InfoFiles.DatasetId, InfoFiles.InfoFileTitle, InfoFiles.SpeciesId, InfoFiles.TissueId, InfoFiles.InbredSetId, InfoFiles.GeneChipId, InfoFiles.AvgMethodId, InfoFiles.InfoPageName, InfoFiles.GN_AccesionId, InfoFiles.AuthorizedUsers, Datasets.DatasetId, Datasets.InvestigatorId from InfoFiles LEFT JOIN Datasets USING (DatasetId) where GN_AccesionId = '".$_GET['GN_AccesionId']."'");
+$result_infofiles = mysql_query("SELECT InfoFiles.InfoFileId, InfoFiles.DatasetId, InfoFiles.InfoFileTitle, InfoFiles.SpeciesId, InfoFiles.TissueId, InfoFiles.InbredSetId, InfoFiles.GeneChipId, InfoFiles.AvgMethodId, InfoFiles.InfoPageName, InfoFiles.Specifics, InfoFiles.GN_AccesionId, InfoFiles.AuthorizedUsers, Datasets.DatasetId, Datasets.InvestigatorId from InfoFiles LEFT JOIN Datasets USING (DatasetId) where GN_AccesionId = '".$_GET['GN_AccesionId']."'");
 if (!$result_infofiles) {
     echo 'Could not run query: ' . mysql_error();
     exit;
@@ -166,6 +166,13 @@ $row = mysql_fetch_array($result_infofiles);
                                 <input class="input-xlarge"
                                     id="InfoPageName" name="InfoPageName" value="<? echo "$row[InfoPageName]"?>"
                                     type="text" maxlength="900" required>
+                            </div>
+                            
+                        <label for="species">Specifics:</label>
+                            <div class="input-append">
+                                <input class="input-xlarge"
+                                    id="InfoPageName" name="Specifics" value="<? echo "$row[Specifics]"?>"
+                                    type="textarea" maxlength="900" maxheight="500" required>
                             </div>
                             
                         <label for="species">AuthorizedUsers:</label>
