--- a/web/infoshare/manager/infofile.html
+++ b/web/infoshare/manager/infofile.html
@@ -237,6 +237,12 @@ echo "</select>";
                                     type="text" maxlength="500" placeholder="InfoPageName">
                             </div>
                             
+     <label for="Investigator">Specifics</label>
+                           <div class="input-append">
+                                <input class="input-xlarge"
+                                    id="quick" name="Specifics"
+                                    type="textarea" maxlength="500" placeholder="Specifics">
+                            </div>
                             
     <label for="AuthorizedUsers">AuthorizedUsers:</label>
                            <div class="input-append">
