Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -67,8 +67,20 @@
 
 <OL>
 
-<LI>Williams EG, Wu Y, Pooja J, Dubuis S, Blattmann P, Argmann CA, Houten SM, Amariuta T, Wolski W, Zamboni N, Aebersold R, Auwerx J (<A HREF="GET" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Systems proteomics and trans-omic integration illuminate new mechanisms in mitochondrial function. Science in press.
+<LI>Williams EG, Wu Y, Pooja J, Dubuis S, Blattmann P, Argmann CA, Houten SM, Amariuta T, Wolski W, Zamboni N, Aebersold R, Auwerx J (<A HREF="GET" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Systems proteomics and trans-omic integration illuminate new mechanisms in mitochondrial function. Science in press
 
+<BR>
+<BR>
+
+<LI>Dickson PE, Miller MM, Calton MA, Bubier JA, Coodk MN, Godlowitz D, Chesler EJ, Mittleman G  (<A HREF="26581503" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Systems genetics of intravenous cocaine self-adminstration in the BXD recombinant inbred mouse panel. Psychopharmacology 233:701-714
+<SMALL><A HREF="/images/upload/Dickson_Mittlemn_IVSA_BXD_PsychoPharm_2016.pdf" target="_blank" class="fwn">PDF version</A>
+</SMALL>
+<BR>
+<BR>
+
+<LI>Alam G, Miller DB, O'Callaghan JP, Lu L, Williams RW, Jones BC  (<A HREF="27182044" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) MPTP neurotoxicity is highly concordant between the sexes among BXD recombinant inbred mouse strains. Neurotoxicology in press
+<SMALL><A HREF="/images/upload/Alam_Jones_MPTP_Neurotox_2016.pdf" target="_blank" class="fwn">PDF version</A>
+</SMALL>
 <BR>
 <BR>
 
@@ -177,7 +189,8 @@ Houtkooper RH, Mouchiroud L, Ryu D, Moullan N, Katsyuba E, Knott G,  Williams RW
 
 <LI> Mulligan MK, Mozhui K, Prins P, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26092713" target="_blank" class="fwn">2016</A>) GeneNetwork – A toolbox for systems genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology; Schughart K, Williams RW eds.; Humana Press, in press
 [This is a currently the most comprehensive protocol and guide (20 Mb) for GeneNetwork.] 
-<SMALL><A HREF="/images/upload/Mulligan_How_To_Use_GeneNetwork_2016_v1.pdf" target="_blank" class="fwn">PDF version</A>					
+<SMALL><A HREF="/images/upload/Mulligan_How_To_Use_GeneNetwork_2016_v1.pdf" target="_blank" class="fwn">PDF version</A></SMALL>
+				
 
 <LI>
 Williams RW, Mulligan MK (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23195314" target="_blank" class="fwn">2012</A>) Genetic and molecular network analysis of behavior. Int Rev Neurobiol. 104:135-57. [Explains the  use of GeneNetwork in behavioral neurogenetics] 
