Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -67,18 +67,22 @@
 
 <OL>
 
-<LI>Williams EG, Wu Y, Pooja J, Dubuis S, Blattmann P, Argmann CA, Houten SM, Amariuta T, Wolski W, Zamboni N, Aebersold R, Auwerx J (<A HREF="GET" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Systems proteomics and trans-omic integration illuminate new mechanisms in mitochondrial function. Science in press
+<LI>Williams EG, Wu Y, Pooja J, Dubuis S, Blattmann P, Argmann CA, Houten SM, Amariuta T, Wolski W, Zamboni N, Aebersold R, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/27284200" target="_blank" class="fwn">2016</A>) Systems proteomics and trans-omic integration illuminate new mechanisms in mitochondrial function. Science 352(6291):aad0189
+<SMALL><A HREF="http://science.sciencemag.org/content/352/6291/aad0189.full" target="_blank" class="fwn">HTML version</A>, <A HREF="/images/upload/WilliamsEG_Auwerx_Systems_Science-2016.pdf " target="_blank" class="fwn">PDF</A>
+
+
+</SMALL>
 
 <BR>
 <BR>
 
-<LI>Dickson PE, Miller MM, Calton MA, Bubier JA, Coodk MN, Godlowitz D, Chesler EJ, Mittleman G  (<A HREF="26581503" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Systems genetics of intravenous cocaine self-adminstration in the BXD recombinant inbred mouse panel. Psychopharmacology 233:701-714
+<LI>Dickson PE, Miller MM, Calton MA, Bubier JA, Coodk MN, Godlowitz D, Chesler EJ, Mittleman G  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26581503" target="_blank" class="fwn">2016</A>) Systems genetics of intravenous cocaine self-adminstration in the BXD recombinant inbred mouse panel. Psychopharmacology 233:701-714
 <SMALL><A HREF="/images/upload/Dickson_Mittlemn_IVSA_BXD_PsychoPharm_2016.pdf" target="_blank" class="fwn">PDF version</A>
 </SMALL>
 <BR>
 <BR>
 
-<LI>Alam G, Miller DB, O'Callaghan JP, Lu L, Williams RW, Jones BC  (<A HREF="27182044" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) MPTP neurotoxicity is highly concordant between the sexes among BXD recombinant inbred mouse strains. Neurotoxicology in press
+<LI>Alam G, Miller DB, O'Callaghan JP, Lu L, Williams RW, Jones BC  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/27182044" target="_blank" class="fwn">2016</A>) MPTP neurotoxicity is highly concordant between the sexes among BXD recombinant inbred mouse strains. Neurotoxicology in press
 <SMALL><A HREF="/images/upload/Alam_Jones_MPTP_Neurotox_2016.pdf" target="_blank" class="fwn">PDF version</A>
 </SMALL>
 <BR>
