Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -59,7 +59,7 @@
 
 <BR>
 <BR>
- <A HREF="https://scholar.google.com/scholar?as_q=&as_epq=&as_oq=webqtl+%22genenetwork.org%22&as_eq=&as_occt=any&as_sauthors=&as_publication=&as_ylo=&as_yhi=&btnG=&hl=en&as_sdt=0%2C5"target="_blank" class="fwn">Google Scholar</A> search for "genenetwork.org" OR "webqtl" (1020 hits as of April 2016).
+ <A HREF="https://scholar.google.com/scholar?as_q=&as_epq=&as_oq=webqtl+%22genenetwork.org%22&as_eq=&as_occt=any&as_sauthors=&as_publication=&as_ylo=&as_yhi=&btnG=&hl=en&as_sdt=0%2C5"target="_blank" class="fwn">Google Scholar</A> search for  <I> "genenetwork" OR "webqtl"  </I> (1380 hits as of June 17, 2016).
 </B>
 
 
@@ -76,8 +76,10 @@
 <BR>
 <BR>
 
-<LI>Dickson PE, Miller MM, Calton MA, Bubier JA, Coodk MN, Godlowitz D, Chesler EJ, Mittleman G  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26581503" target="_blank" class="fwn">2016</A>) Systems genetics of intravenous cocaine self-adminstration in the BXD recombinant inbred mouse panel. Psychopharmacology 233:701-714
-<SMALL><A HREF="/images/upload/Dickson_Mittlemn_IVSA_BXD_PsychoPharm_2016.pdf" target="_blank" class="fwn">PDF version</A>
+
+
+<LI>	Sloan Z, Arends D, Broman KW, Centeno A, Furlotte N, Nijveen H, Yan L, Zhou X, Williams RW, Prins P (2016) GenetNetwork: framework for web-based genetics. The Journal of Open Source Software http://joss.theoj.org/papers/10.21105/joss.00025  (http://dx.doi.org/10.21105/joss.00025)
+<SMALL><A HREF="http://joss.theoj.org/papers/10.21105/joss.00025" target="_blank" class="fwn">HTML version</A>
 </SMALL>
 <BR>
 <BR>
