--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -47,6 +47,12 @@
 </Blockquote>
 
 <Blockquote>
+<STRONG>2016-07-26: Raw and processed data from our Hippocampus studies based on publication "Genetics of the hippocampal transcriptome in mouse: a systematic survey and online neurogenomics resource" can be accessed now through GEO series GSE84767.</STRONG>
+<ul>
+<li><a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE84767">Data Set Group: Hippocampus Consortium M430v2</a> Pubmed ID:<a href="http://www.ncbi.nlm.nih.gov/pubmed/20582282"> 20582282</a></li> have been assigned with a <a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE84767">GEO Series record GSE84767</a> which provides access to all of the data and is the accession that should be quoted in any manuscript discussing the data.
+</Blockquote>
+
+<Blockquote>
 <STRONG>2016-07-16: Gene expression data for 39 inbred mice strains for CD4+ T cells</STRONG> profiling by array entered into GeneNetwork.
 <ul>
 <li><a href="http://genenetwork.org/webqtl/main.py?FormID=sharinginfo&GN_AccessionId=801">HMS Spleen CD4+ T cells MDP Affy Mouse Gene 1.0 ST (Jul16) Gene Level</a></li>
@@ -191,17 +197,20 @@ Currently this dataset is confidential, please contact <a href="mailto:mradic@ut
 <ul>
 <li>UFL MDP Hippocampus Antidepressant Affy Mouse 430 2.0 (Aug14) RMA **</li>
 </ul>
-Currently this dataset is confidential, please contact <a href="mailto:brookemiller@ufl.edu"> Brooke Miller</a> University of Florida for further information. (Implemented by Robert Clark, Arthur Centeno and Rob Williams).
+Currently this dataset is confidential, please contact <a href="mailto:brookemiller@ufl.edu"> Brooke Miller</a> University of Florida for further information. (Implemented by Brooke Miller, Arthur Centeno and Rob Williams).
 </Blockquote>
 
 <Blockquote>
-<STRONG>2014-08-08: BXD Fecal Metabolites LFD+HFD</STRONG> profiling by array entered into GeneNetwork.
+<STRONG>2014-08-10: RTI RCMRC BXD Fecal Metabolites CD+HFD (Aug14) Log2</STRONG> profiling by array entered into GeneNetwork.
 <ul>
-<li>RTI RCMRC BXD Fecal Metabolites LFD+HFD (Aug14) **</li>
-<li>RTI RCMRC BXD Fecal Metabolites HFD (Aug14) **</li>
-<li>RTI RCMRC BXD Fecal Metabolites LFD (Aug14) **</li>
+<li><a href="http://genenetwork.org/webqtl/main.py?FormID=sharinginfo&GN_AccessionId=717">RTI RCMRC BXD Fecal Metabolites CD+HFD (Aug14) Log2</a></li>
+<li><a href="http://genenetwork.org/webqtl/main.py?FormID=sharinginfo&GN_AccessionId=716">RTI RCMRC BXD Fecal Metabolites HFD (Aug14) Log2</a></li>
+<li><a href="http://genenetwork.org/webqtl/main.py?FormID=sharinginfo&GN_AccessionId=715">RTI RCMRC BXD Fecal Metabolites CD (Aug14) Log2</a></li>
 </ul>
-Currently this dataset is confidential, please contact <a href="mailto:rclark@rti.org"> Robert Clark </a>  for further information. (Implemented by Robert Clark, Arthur Centeno and Rob Williams).
+<p>The goal of this project is to study expression of a large set of defined and undefined metabolites in fecal samples from a genetically diverse set of BXD mouse strains (females) raised either on a high fat diet or low fat diet. Samples were taken from animals at sacrifices directly from the large intestine.<p>
+Aim: Effect of genetics and diet on fecal metabolomics<br>
+Use UPLC-MS Broad Spectrum Metabolomics to study:Mice fecal samples
+To capture the most signal, all samples were analyzed under positive and negative ion mode using a reversed-phase separation. Please contact <a href="mailto:rclark@rti.org">Robert Clark</a> RTI International for further information. (Implemented by Robert Clark, Arthur Centeno and Rob Williams).</P>
 </Blockquote>
 
 <Blockquote>
