On branch master

--- a/web/infoshare/manager/investigator.html
+++ b/web/infoshare/manager/investigator.html
@@ -154,9 +154,10 @@ $(document).ready(function () {
                                 <select id="trait_type" name="Country" class="span2">
                                     <option value="0">Select Country</option>
                                     <option value="USA">United States</option>
-                                    <option value="China">China</option>
-                                    <option value="Mexico">Mexico</option>
                                     <option value="Canada">Canada</option>
+                                    <option value="China">China</option>
+                                    <option value="Mexico">Italy</option>
+                                    <option value="Mexico">Mexico</option>
                                     <option value="UK">UK</option>
                                 </select>
                             </div>
