--- a/web/reference.html
+++ b/web/reference.html
@@ -67,6 +67,16 @@
 
 <OL>
 
+<LI>Pinelli M, Carissimo A, Cutillo L, Lai CH, Mutarelli M, Moretti MN, Singh MV, Karali M, Carrella D, Pizzo M, Russo F, Ferrari S, Ponzin D, Angelini C, Banfi S, di Bernardo D  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/27235414" target="_blank" class="fwn">2016</A>) An atlas of gene expression and gene co-regulation in the human retina.Nucleic Acids Res. 2016 Jul 8;44(12):5773-84
+<SMALL><A HREF="http://retina.tigem.it" target="_blank" class="fwn">RETINA database</A>, and see the <A HREF="/images/upload/Pinelli_diBerardo_2016_AtlasHumanRetina.pdf" target="_blank" class="fwn">PDF</A>. These data are now in GeneNetwork (Species = Human, Group = Retina).
+
+
+</SMALL>
+
+<BR>
+<BR>
+
+
 <LI>Williams EG, Wu Y, Pooja J, Dubuis S, Blattmann P, Argmann CA, Houten SM, Amariuta T, Wolski W, Zamboni N, Aebersold R, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/27284200" target="_blank" class="fwn">2016</A>) Systems proteomics and trans-omic integration illuminate new mechanisms in mitochondrial function. Science 352(6291):aad0189
 <SMALL><A HREF="http://science.sciencemag.org/content/352/6291/aad0189.full" target="_blank" class="fwn">HTML version</A>, <A HREF="/images/upload/WilliamsEG_Auwerx_Systems_Science-2016.pdf " target="_blank" class="fwn">PDF</A>
 
