Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -59,7 +59,7 @@
 
 <BR>
 <BR>
- <A HREF="https://scholar.google.com/scholar?as_q=&as_epq=&as_oq=webqtl+%22genenetwork.org%22&as_eq=&as_occt=any&as_sauthors=&as_publication=&as_ylo=&as_yhi=&btnG=&hl=en&as_sdt=0%2C5"target="_blank" class="fwn">Google Scholar</A> search for  <I> "genenetwork" OR "webqtl"  </I> (1380 hits as of June 17, 2016).
+ <A HREF="https://scholar.google.com/scholar?as_q=&as_epq=&as_oq=webqtl+%22genenetwork.org%22&as_eq=&as_occt=any&as_sauthors=&as_publication=&as_ylo=&as_yhi=&btnG=&hl=en&as_sdt=0%2C5"target="_blank" class="fwn">Google Scholar</A> search for  <I> "genenetwork" OR "webqtl"  </I> (1430 hits as of September 8, 2016).
 </B>
 
 
@@ -290,7 +290,11 @@ Zhang B, Schmoyer D, Kirov S, Snoddy J (<a href="http://www.pubmedcentral.nih.go
 
 
 <LI>
-Chaum E, Winborn CS, Bhattacharya S (<A HREF="https://ncbi.nlm.nih.gov/pubmed/get" target="_blank" class="fwn">2015</A>) Genomic regulation of senescence and innate immunity signaling in the retinal pigment epithelium.  Mammalian Genome 26:210-221 <A HREF="/images/upload/ChaumMammGenome2015.pdf"> Full text</A>
+Ashbrook DG, Gini B, Hager R (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26701914" target="_blank" class="fwn">2015</A>) Genetic variation in offspring indirectly influences the quality of maternal behaviour in mice. eLIFE 4:e11814 
+<LI>
+Ashbrook DG, Williams RW, Lu L, Hager R (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26190982" target="_blank" class="fwn">2015</A>) A cross-species genetic analysis identifies candidate genes for mouse anxiety and human bipolar disorder. Frontiers in Behavioral Neuroscience 9:171
+<LI>
+Chaum E, Winborn CS, Bhattacharya S (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25963977" target="_blank" class="fwn">2015</A>) Genomic regulation of senescence and innate immunity signaling in the retinal pigment epithelium.  Mammalian Genome 26:210-221 <A HREF="/images/upload/ChaumMammGenome2015.pdf"> Full text</A>
 <LI>Cheng Q, Seltzer Z, Sima C, Lakschevitz FS, Glogauer M (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25608512" target="_blank" class="fwn">2015</A>) Quantitative trait loci and candidate genes for neutrophil recruitment in sterile inflammation mapped in AXB-BXA recombinant inbred mice. PLoS One 10:e0124117
 <LI>Cook MN, Baker JA, Heldt SA, Williams RW, Hamre KM, Lu L (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25991709" target="_blank" class="fwn">2015</A>) Identification of candidate genes that underlie the QTL on chromosome 1 that mediates genetic differences in stress-ethanol interactions. Physiol Genomics in press
 
