Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -31,6 +31,7 @@
 
 <BR> <BR>
 <left>
+<a href="#2015">2014</a> |
 <a href="#2014">2014</a> |
 <a href="#2013">2013</a> |
 <a href="#2012">2012</a> |
@@ -303,7 +304,12 @@ Chaum E, Winborn CS, Bhattacharya S (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25
 <LI>Lee J, Seol MY, Jeong S, Kwon HJ, Lee CR, Ku CR, Kang SW, Jeong JJ, Shin DY, Nam KH, Lee EJ, Chung WY, Jo YS (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25942439" target="_blank" class="fwn">2015</A>) KSR1 is coordinately regulated with Notch signaling and oxidative phosphorylation in thyroid cancer. J Mol Endocrinol 54:115-124
 <LI>Padula AE, Griffin WC 3rd, Lopez MF, Nimitvilai S, Cannady R, McGuier NS, Chesler EJ, Miles MF, Williams RW, Randall PK, Woodward JJ, Becker HC, Mulholland PJ (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25942439" target="_blank" class="fwn">2015</A>) KCNN genes that encode small-conductance Ca(2+)-activated K(+) channels influence alcohol and drug addiction. Neuropsychopharmacology 40:1928-1939
 <LI>Scott RE, Ghule PN, Stein JL, Stein GS (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25662840" target="_blank" class="fwn">2015</A>) Cell cycle gene expression networks discovered using systems biology: Significance in carcinogenesis. J Cell Physiol 230:2533-42
+
+<LI>
+Shea CJ, Carhuatanta KA, Wagner J, Bechmann N, Moore R, Herman JP, Jankord R  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26079812" target="_blank" class="fwn">2015</A>) Variable impact of chronic stress on spatial learning and memory in BXD mice. Physiol Behav. 150:69-77 <A HREF="http://www.sciencedirect.com/science/article/pii/S0031938415003583"> Full text</A>
+
 <LI> Xue Y, Li J, Yan L, Lu L, Liao FF (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26092713" target="_blank" class="fwn">2015</A>) Genetic variability to diet-induced hippocampal dysfunction in BXD recombinant inbred (RI) mouse strains. Behav Brain Res 292:83-94
+
 <LI> Williams EG, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26140590" target="_blank" class="fwn">2015</A>) The convergence of systems and reductionist approaches in complex trait analysis. Cell 162:23-32. <SMALL><A HREF="/images/upload/WilliamsEG_Auwerx_Cell2015.pdf" target="_blank" class="fwn">PDF version</A></SMALL>
 
 <LI> Ashbrook DG, Williams RW, Lu L, Hager R (<A HREF="https://ncbi.nlm.nih.gov/pubmed/26140590" target="_blank" class="fwn">2015</A>) A cross-species genetic analysis identifies candidate genes for mouse anxiety and human bipolar disorder. Front Behav Neurosci 9:171 
