Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -33,7 +33,7 @@
 <div class="fb-like" data-href="http://www.genenetwork.org/whats_new.html" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
 -->
 <Blockquote>
-<STRONG>2016-08-02: Notes on new BXD names</STRONG>.
+<STRONG>2016-10-03: Notes on new BXD names</STRONG>.
 <OL>
 
 <LI> <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a>, <a href="http://jaxmice.jax.org/strain/007124" target="_blank">BXD73a</a> (original known as <i>BXD80</i>), and <a href="http://jaxmice.jax.org/strain/007146" target="_blank">BXD73b</a> (originally known as <i>BXD103</i>) are genetically very similar. <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a> and <i>BXD80</i> are genetically identical at 82264 of 100290 markers (82% identical by descent). <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a> keeps its original name and JAX identifier number (JR#7117), whereas <i>BXD80</i> is now referred to as <a href="http://jaxmice.jax.org/strain/007124" target="_blank">BXD73a</a> (JR#7124). <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a> and BXD103 are genetically identical at 90917 of 100290 markers (90.6% identical by descent). <i>BXD103</i> is now referred to as <a href="http://jaxmice.jax.org/strain/007146" target="_blank">BXD73b</a> (JR#7146). 
@@ -47,6 +47,29 @@
 </Blockquote>
 
 <Blockquote>
+<STRONG>2016-10-02: BXD Genotypes file status (October 2016)</STRONG>
+<p>
+In September and October 2016, Robert Williams, Jesse Ingels, Lu Lu, and Danny Arends  released new genotype files for many of the original BXD strains (BXD1 through BXD102), and for all of the new strains (BXD104 to BXD220). Genotypes were generated at about 74,000 SNPs using the GigaMUGA array developed by Drs. Fernando Pardo-Manuel de Villena (University of North Carolina) and Gary Churchill (The Jackson Laboratory). Genotypes were generated at GeneSeek (Neogen Inc) with financial support from the University of Tennessee Center for Integrative and Translational Genomics. 
+<p>
+The new genotypes are now available in GeneNetwork as the <a href="http://genenetwork.org/webqtl/main.py?FormID=sharinginfo&GN_AccessionId=600" target="_blank">2017 Genotype file</a>. All SNPs were mapped to the older July 2007 mm9 NCBI Build 37 assembly and to the newer Dec 2011, mm10, GRCm38 assembly. Of the 74,000 GigaMUGA and many other markers we have typed, only about 6800 are useful (informative) in defining recombination events in the current set of BXDs. These informative markers either define unique recombination patterns across the 198 BXD strains (including extinct strains) or they define the proximal and distal ends of regions that do not contain any known recombinations in the BXD family.
+<p>
+The file does not include any markers for Chr Y or the mitochondrion. 
+<p>
+As of October 2016 GeneNetwork still uses mm9 coordinates for mapping functions.
+<p>
+(Updated Oct 2, 2016 by RW Williams)
+</p>
+</Blockquote>
+
+<Blockquote>
+<STRONG>2016-09-29: TIGEM Human Retina RNA-Seq (Sep16) RPKM log2</STRONG> profiling by array entered into GeneNetwork.
+<ul>
+<li><a href="http://genenetwork.org/webqtl/main.py?FormID=sharinginfo&GN_AccessionId=802">TIGEM Human Retina RNA-Seq (Sep16) RPKM log2</a></li>
+</ul>
+This dataset is public available, please contact <a href="mailto:banfi@tigem.it">Michele Pinelli</a> at <a href="http://www.tigem.it" target="_blank">Telethon Institute of Genetics and Medicine (TIGEM)</a> for further information. (Implemented by Michele Pinelli, Arthur Centeno and Rob Williams).
+</Blockquote>
+
+<Blockquote>
 <STRONG>2016-07-26: Raw and processed data from our Hippocampus studies based on publication "Genetics of the hippocampal transcriptome in mouse: a systematic survey and online neurogenomics resource" can be accessed now through GEO series GSE84767.</STRONG>
 <ul>
 <li><a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE84767">Data Set Group: Hippocampus Consortium M430v2</a> Pubmed ID:<a href="http://www.ncbi.nlm.nih.gov/pubmed/20582282"> 20582282</a></li> have been assigned with a <a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE84767">GEO Series record GSE84767</a> which provides access to all of the data and is the accession that should be quoted in any manuscript discussing the data.
@@ -56,7 +79,7 @@
 <STRONG>2016-07-16: Gene expression data for 39 inbred mice strains for CD4+ T cells</STRONG> profiling by array entered into GeneNetwork.
 <ul>
 <li><a href="http://genenetwork.org/webqtl/main.py?FormID=sharinginfo&GN_AccessionId=801">HMS Spleen CD4+ T cells MDP Affy Mouse Gene 1.0 ST (Jul16) Gene Level</a></li>
-<li>HMS Spleen CD4+ T cells MDP Affy Mouse Gene 1.0 ST (Jul16) Exon Level (in working progress)</li>
+<li><a href="http://genenetwork.org/webqtl/main.py?FormID=sharinginfo&GN_AccessionId=804">HMS Spleen CD4+ T cells MDP Affy Mouse Gene 1.0 ST (Jul16) Exon Level</a></li>
 </ul>
 <a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE60337">GEO Series: GSE60337</a>. To determine the breadth and underpinning of changes in immunocyte gene expression due to genetic variation in mice, we performed, as part of the Immunological Genome Project, gene expression profiling for CD4(+) T cells and neutrophils purified from 39 inbred strains of the Mouse Phenome Database.
 </Blockquote>
