Rob changed some texts.

--- a/web/footer.html
+++ b/web/footer.html
@@ -32,9 +32,10 @@ This site is currently operated by
 		GeneNetwork support from:
 		<UL>
 		<LI><a class="smallsize" target="_blank" href="http://citg.uthsc.edu">The UT Center for Integrative and Translational Genomics</A>
-		<LI><a class="smallsize" target="_blank" href="http://www.iniastress.org">NIAAA</A> Integrative Neuroscience Initiative on Alcoholism (U01 AA016662, U01 AA013499, U24 AA013513, U01 AA014425, 2006-2016)
-		<LI><a class="smallsize" target="_blank" href="http://www.nia.nih.gov">NIA</A> (R01AG043930, 2013-2018)
+<LI><a class="smallsize" target="_blank" href="http://www.iniastress.org">NIGMS</A> Systems Genetics and Precision Medicine project (R01 GM123489, 2017-2022)
+		<LI><a class="smallsize" target="_blank" href="http://www.iniastress.org">NIAAA</A> Integrative Neuroscience Initiative on Alcoholism (U01 AA016662, U01 AA013499, U24 AA013513, U01 AA014425, 2006-2017)
 
+		<LI><a class="smallsize" target="_blank" href="http://www.nia.nih.gov">NIA</A> (R01AG043930, 2013-2018)
 <LI><a class="smallsize" target="_blank" href="http://www.drugabuse.gov">NIDA</A>, <a class="smallsize" target="_blank" href="http://www.nimh.nih.gov/">NIMH</A>, and <a class="smallsize" target="_blank" href="http://www.niaaa.nih.gov/">NIAAA</A> (P20-DA 21131, 2001-2012)
 		<LI>NCI <a class="smallsize" target="_blank" href="http://emice.nci.nih.gov/">MMHCC</A> (U01CA105417), NCRR, <a class="smallsize" target="_blank" href="http://www.birncommunity.org">BIRN</A>, (U24 RR021760)
 		</UL>
