Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/dbdoc/BXDGeno.html
+++ b/web/dbdoc/BXDGeno.html
@@ -24,7 +24,7 @@
 
 <P class="subtitle">&nbsp;&nbsp;&nbsp;&nbsp;Coming Soon:</P>
 <Blockquote>
-The BXD genotype file is being upgraded in 2010-2011 using the new high density Affymetrix array developed in the laboratories of Drs. Fernando Pardo-Manuel de Villena (University of North Carolina) and Gary Churchill (The Jackson Laboratory). This cutting-edge research tool, produced by Affymetrix, provides more than 100 times the SNP coverage  than any other available mouse genotyping platform, permitting high resolution mapping and genomic analysis. (580,000 high quality SNPs of 623,124 SNPs and 916,269 invariant probes. 
+The BXD genotype file was upgraded in 2016 using data from multiple platforms including data from (1) the Affymetrix mouse genotyping array (data acquired mainly in 2008), (2) the original MUGA array (data acquired in 2011), and (3) the GigaMUGA array (data acquired in 2016). All of these platforms were developed by Drs. Fernando Pardo-Manuel de Villena (University of North Carolina) and Gary Churchill (The Jackson Laboratory) and colleagues. Collectively these genotyping platforms provides far better SNP coverage than earlier 2001 vintage mouse genotyping methods that relied on about 1000 microsatellite markers.
 
 <P>Yang H, Ding Y, Hutchins LN, Szatkiewicz J, Bell TA, Paigen BJ, Graber JH, Pardo-Manuel de Villena, F, Churchill GA (2009) A customized and verstatile high density genotyping array for the mouse. Nat Methods 6:663-666
 
