Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/RIsample.html
+++ b/web/RIsample.html
@@ -216,13 +216,151 @@
 <TD class="strains" width="80">BXD101</TD><TD class="values" width="60">X</TD>
 </TR>
 
-<TR>
-<TD class="strains" width="80">BXD102</TD><TD class="values" width="60">X</TD>
+<TR><TD class="strains" width="80">BXD102</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD104</TD><TD class="values" width="60">50.821</TD>
+<TD class="strains" width="80">BXD105</TD><TD class="values" width="60">32.187</TD>
+<TD class="strains" width="80">BXD106</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD107</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD108</TD><TD class="values" width="60">43.9</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD109</TD><TD class="values" width="60">40.6</TD>
+<TD class="strains" width="80">BXD110</TD><TD class="values" width="60">37.24</TD>
+<TD class="strains" width="80">BXD111</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD112</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD113</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD114</TD><TD class="values" width="60">X</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD115</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD116</TD><TD class="values" width="60">61.148</TD>
+<TD class="strains" width="80">BXD117</TD><TD class="values" width="60">41.205</TD>
+<TD class="strains" width="80">BXD119</TD><TD class="values" width="60">51.21</TD>
+<TD class="strains" width="80">BXD120</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD121</TD><TD class="values" width="60">48.138</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD122</TD><TD class="values" width="60">31.94</TD>
+<TD class="strains" width="80">BXD123</TD><TD class="values" width="60">50.22</TD>
+<TD class="strains" width="80">BXD124</TD><TD class="values" width="60">65.79</TD>
+<TD class="strains" width="80">BXD125</TD><TD class="values" width="60">43.7</TD>
+<TD class="strains" width="80">BXD126</TD><TD class="values" width="60">56.52</TD>
+<TD class="strains" width="80">BXD127</TD><TD class="values" width="60">58.7</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD128</TD><TD class="values" width="60">52.64</TD>
+<TD class="strains" width="80">BXD128a</TD><TD class="values" width="60">48.116</TD>
+<TD class="strains" width="80">BXD130</TD><TD class="values" width="60">59.6</TD>
+<TD class="strains" width="80">BXD131</TD><TD class="values" width="60">49.054</TD>
+<TD class="strains" width="80">BXD132</TD><TD class="values" width="60">41.7</TD>
+<TD class="strains" width="80">BXD133</TD><TD class="values" width="60">44.79</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD134</TD><TD class="values" width="60">64.79</TD>
+<TD class="strains" width="80">BXD135</TD><TD class="values" width="60">53.2</TD>
+<TD class="strains" width="80">BXD136</TD><TD class="values" width="60">45.51</TD>
+<TD class="strains" width="80">BXD137</TD><TD class="values" width="60">47.87</TD>
+<TD class="strains" width="80">BXD138</TD><TD class="values" width="60">50.24</TD>
+<TD class="strains" width="80">BXD139</TD><TD class="values" width="60">64.44</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD141</TD><TD class="values" width="60">54</TD>
+<TD class="strains" width="80">BXD142</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD144</TD><TD class="values" width="60">54.4</TD>
+<TD class="strains" width="80">BXD145</TD><TD class="values" width="60">53.574</TD>
+<TD class="strains" width="80">BXD146</TD><TD class="values" width="60">41.23</TD>
+<TD class="strains" width="80">BXD147</TD><TD class="values" width="60">41.05</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD148</TD><TD class="values" width="60">49.6</TD>
+<TD class="strains" width="80">BXD149</TD><TD class="values" width="60">56.3</TD>
+<TD class="strains" width="80">BXD150</TD><TD class="values" width="60">44.8</TD>
+<TD class="strains" width="80">BXD151</TD><TD class="values" width="60">47.1</TD>
+<TD class="strains" width="80">BXD152</TD><TD class="values" width="60">49.94</TD>
+<TD class="strains" width="80">BXD153</TD><TD class="values" width="60">46.6</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD154</TD><TD class="values" width="60">43.34</TD>
+<TD class="strains" width="80">BXD155</TD><TD class="values" width="60">51.192</TD>
+<TD class="strains" width="80">BXD156</TD><TD class="values" width="60">51.08</TD>
+<TD class="strains" width="80">BXD157</TD><TD class="values" width="60">36.8</TD>
+<TD class="strains" width="80">BXD160</TD><TD class="values" width="60">53.09</TD>
+<TD class="strains" width="80">BXD161</TD><TD class="values" width="60">56.58</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD162</TD><TD class="values" width="60">36.56</TD>
+<TD class="strains" width="80">BXD165</TD><TD class="values" width="60">45.35</TD>
+<TD class="strains" width="80">BXD168</TD><TD class="values" width="60">49.85</TD>
+<TD class="strains" width="80">BXD169</TD><TD class="values" width="60">53.59</TD>
+<TD class="strains" width="80">BXD170</TD><TD class="values" width="60">54.88</TD>
+<TD class="strains" width="80">BXD171</TD><TD class="values" width="60">50.95</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD172</TD><TD class="values" width="60">54.1</TD>
+<TD class="strains" width="80">BXD173</TD><TD class="values" width="60">49.905</TD>
+<TD class="strains" width="80">BXD174</TD><TD class="values" width="60">31.196</TD>
+<TD class="strains" width="80">BXD175</TD><TD class="values" width="60">39.914</TD>
+<TD class="strains" width="80">BXD176</TD><TD class="values" width="60">35.998</TD>
+<TD class="strains" width="80">BXD177</TD><TD class="values" width="60">42.042</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD178</TD><TD class="values" width="60">40.98</TD>
+<TD class="strains" width="80">BXD180</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD181</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD183</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD184</TD><TD class="values" width="60">52.434</TD>
+<TD class="strains" width="80">BXD186</TD><TD class="values" width="60">47.3025</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD187</TD><TD class="values" width="60">45.12</TD>
+<TD class="strains" width="80">BXD188</TD><TD class="values" width="60">33.446</TD>
+<TD class="strains" width="80">BXD189</TD><TD class="values" width="60">45.4</TD>
+<TD class="strains" width="80">BXD190</TD><TD class="values" width="60">27.67</TD>
+<TD class="strains" width="80">BXD191</TD><TD class="values" width="60">36.21</TD>
+<TD class="strains" width="80">BXD192</TD><TD class="values" width="60">50.36</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD193</TD><TD class="values" width="60">34.886</TD>
+<TD class="strains" width="80">BXD194</TD><TD class="values" width="60">47.32</TD>
+<TD class="strains" width="80">BXD195</TD><TD class="values" width="60">50.3</TD>
+<TD class="strains" width="80">BXD196</TD><TD class="values" width="60">44.17</TD>
+<TD class="strains" width="80">BXD197</TD><TD class="values" width="60">43.818</TD>
+<TD class="strains" width="80">BXD198</TD><TD class="values" width="60">51.2275</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD199</TD><TD class="values" width="60">43.148</TD>
+<TD class="strains" width="80">BXD200</TD><TD class="values" width="60">32.964</TD>
+<TD class="strains" width="80">BXD201</TD><TD class="values" width="60">39.22</TD>
+<TD class="strains" width="80">BXD202</TD><TD class="values" width="60">55.4</TD>
+<TD class="strains" width="80">BXD203</TD><TD class="values" width="60">45.514</TD>
+<TD class="strains" width="80">BXD204</TD><TD class="values" width="60">38.75</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD205</TD><TD class="values" width="60">46.45</TD>
+<TD class="strains" width="80">BXD206</TD><TD class="values" width="60">43.42</TD>
+<TD class="strains" width="80">BXD207</TD><TD class="values" width="60">51.28</TD>
+<TD class="strains" width="80">BXD208</TD><TD class="values" width="60">47.81</TD>
+<TD class="strains" width="80">BXD209</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD210</TD><TD class="values" width="60">42.84</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD211</TD><TD class="values" width="60">43.77</TD>
+<TD class="strains" width="80">BXD212</TD><TD class="values" width="60">36.11</TD>
+<TD class="strains" width="80">BXD213</TD><TD class="values" width="60">40.88</TD>
+<TD class="strains" width="80">BXD214</TD><TD class="values" width="60">39.57</TD>
+<TD class="strains" width="80">BXD215</TD><TD class="values" width="60">49</TD>
+<TD class="strains" width="80">BXD216</TD><TD class="values" width="60">41.648</TD>
+</TR>
+
+<TR><TD class="strains" width="80">BXD217</TD><TD class="values" width="60">42.186</TD>
+<TD class="strains" width="80">BXD218</TD><TD class="values" width="60">45.62</TD>
+<TD class="strains" width="80">BXD219</TD><TD class="values" width="60">43.002</TD>
+<TD class="strains" width="80">BXD220</TD><TD class="values" width="60">41.78</TD>
 <TD></TD><TD></TD><TD></TD><TD></TD><TD></TD></TR>
 </TABLE>
 
 <P>Copy the following line to paste into the GeneNetwork entry box:</P>
-<CODE>6.717 11.511 X 20.201 X 15.175 X 43.132 21.755 47.028 X 22.096 22.219 X X 35.218 49.557 34.263 X 8.783 62.439 40.449 X  X 36.554 29.903 28.437 14.894 5.665 60.723 50.458 16.857 37.410 35.857 33.139 42.392 X 62.003 28.797 30.399 X X 30.876 22.120 X 20.704 28.619 X 16.156 41.392 30.412 26.209 62.690 23.878 38.629 27.467 23.630 X -0.900 X 43.094 X 56.081 49.670 16.654 21.356 20.465 26.860 29.422 X 30.713 68.684 X X 25.012 38.874 15.183 25.444 60.408 X 35.370 34.561 46.055 43.238 72.431 18.648 32.317 45.796 30.291 X 11.133 52.551 14.143 50.821 32.187 X  X </CODE>
+<CODE>6.717 11.511 X 20.201 X 15.175 X 43.132 21.755 47.028 X 22.096 22.219 X X 35.218 49.557 34.263 X 8.783 62.439 40.449 X X 36.554 29.903 28.437 14.894 5.665 60.723 50.458 16.857 37.41 35.857 33.139 42.392 X 62.003 28.797 30.399 X X 30.876 22.12 X 20.704 28.619 X 16.156 41.392 30.412 26.209 62.69 23.878 38.629 27.467 23.63 X -0.9 X 43.094 X 56.081 49.67 16.654 21.356 20.465 26.86 29.422 X 30.713 68.684 X X 25.012 38.874 15.183 25.444 60.408 X 35.37 34.561 46.055 43.238 72.431 18.648 32.317 45.796 30.291 X 11.133 52.551 14.143 50.821 32.187 X X 43.9 40.6 37.24 X X X X X 61.148 41.205 51.21 X 48.138 31.94 50.22 65.79 43.7 56.52 58.7 52.64 48.116 59.6 49.054 41.7 44.79 64.79 53.2 45.51 47.87 50.24 64.44 54 X 54.4 53.574 41.23 41.05 49.6 56.3 44.8 47.1 49.94 46.6 43.34 51.192 51.08 36.8 53.09 56.58 36.56 45.35 49.85 53.59 54.88 50.95 54.1 49.905 31.196 39.914 35.998 42.042 40.98 X X X 52.434 47.3025 45.12 33.446 45.4 27.67 36.21 50.36 34.886 47.32 50.3 44.17 43.818 51.2275 43.148 32.964 39.22 55.4 45.514 38.75 46.45 43.42 51.28 47.81 X 42.84 43.77 36.11 40.88 39.57 49 41.648 42.186 45.62 43.002 41.78</CODE>
 
 <HR width="90%"><P class="subtitle">BXH</P>
 
